<resources>
    <string name="app_name">My App Portafolio</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_title">My Nanodregree Apps!</string>
    <string name="btn_spotify">SPOTIFY STREAMER</string>
    <string name="btn_scores">SCORES APP</string>
    <string name="btn_library">LIBRARY APP</string>
    <string name="btn_bigger">BUILD IT BIGGER</string>
    <string name="btn_reader">XYZ READER</string>
    <string name="btn_my_own_app">CAPSTONE: MY OWN APP</string>
</resources>
